--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -4,9 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.codepath.simpletodo.AddItemActivity">
+    tools:context="com.codepath.simpletodo.AddItemActivity" >
 
-    <TextView
+    <TextView style="@style/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -14,21 +14,23 @@
         android:id="@+id/tvTitle"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
-    <EditText
+    <EditText style="@style/edit_item_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/etTitle"
-        android:hint="@string/enter_name"
-        android:layout_below="@+id/tvTitle"
+        android:hint="@string/enter_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp" />
+        android:layout_below="@+id/tvTitle"
+        android:layout_alignRight="@+id/etDueDate"
+        android:layout_alignEnd="@+id/etDueDate" />
 
-    <TextView
+    <TextView style="@style/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -36,41 +38,30 @@
         android:id="@+id/tvPriority"
         android:layout_below="@+id/etTitle"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp" />
+        android:layout_alignParentStart="true" />
 
-    <Spinner
+    <Spinner style="@style/edit_item_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerPriority"
         android:spinnerMode="dropdown"
-        android:layout_below="@+id/tvPriority"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp" />
+        android:layout_below="@+id/etTitle"
+        android:layout_toRightOf="@+id/tvDueDate"
+        android:layout_marginTop="50px"
+        android:layout_alignRight="@+id/etTitle"
+        android:layout_alignEnd="@+id/etTitle" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:id="@+id/btnSaveNewItem"
-        android:onClick="onSaveNewItem"
-        android:layout_below="@+id/etDueDate"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp" />
-
-    <TextView
+    <TextView style="@style/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/due_date"
         android:id="@+id/tvDueDate"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/spinnerPriority"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <EditText style="@style/edit_item_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="date"
@@ -78,6 +69,18 @@
         android:id="@+id/etDueDate"
         android:layout_below="@+id/tvDueDate"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/btnSaveNewItem"
+        android:layout_alignEnd="@+id/btnSaveNewItem" />
+
+    <Button style="@style/button_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/btnSaveNewItem"
+        android:onClick="onSaveNewItem"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/button_style" />
 
 </RelativeLayout>
