--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -6,41 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.codepath.simpletodo.EditItemActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/etEditTitle"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:id="@+id/btnSaveEdit"
-        android:onClick="onSaveItem"
-        android:layout_marginTop="74dp"
-        android:layout_below="@+id/tvEditDueDate"
-        android:layout_alignRight="@+id/tvEditTitle"
-        android:layout_alignEnd="@+id/tvEditTitle" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/edit_priority"
-        android:id="@+id/tvEditPriority"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/etEditTitle"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
+    <TextView style="@style/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -48,18 +14,43 @@
         android:id="@+id/tvEditTitle"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
+
+    <EditText style="@style/edit_item_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/etEditTitle"
+        android:layout_below="@+id/tvEditTitle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/spinnerPriority"
+        android:layout_alignEnd="@+id/spinnerPriority" />
+
+    <TextView style="@style/label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/edit_priority"
+        android:id="@+id/tvEditPriority"
+        android:layout_below="@+id/etEditTitle"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Spinner
+    <Spinner style="@style/edit_item_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerPriority"
-        android:layout_below="@+id/tvEditPriority"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:spinnerMode="dropdown" />
+        android:spinnerMode="dropdown"
+        android:layout_below="@+id/etEditTitle"
+        android:layout_toRightOf="@+id/tvEditDueDate"
+        android:layout_marginTop="50px"
+        android:layout_alignRight="@+id/etEditDueDate"
+        android:layout_alignEnd="@+id/etEditDueDate" />
 
-    <TextView
+    <TextView style="@style/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -69,7 +60,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <EditText style="@style/edit_item_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="date"
@@ -80,5 +71,15 @@
         android:layout_below="@+id/tvEditDueDate"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button style="@style/button_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/btnSaveEdit"
+        android:onClick="onSaveItem"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/button_style" />
 
 </RelativeLayout>
