--- a/app/src/main/res/layout/to_do_item.xml
+++ b/app/src/main/res/layout/to_do_item.xml
@@ -3,9 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <FrameLayout style="@style/item_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:background="@drawable/row_top"
         android:id="@+id/row">
 
         <CheckBox
@@ -17,15 +19,15 @@
             android:focusable="false"
             android:focusableInTouchMode="false" />
 
-        <TextView
+        <TextView style="@style/item_info"
             android:layout_width="245dp"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Title"
             android:id="@+id/tvTitle"
-            android:layout_gravity="center" />
+            android:layout_marginLeft="35dp" />
 
-        <TextView
+        <TextView style="@style/item_info"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -36,26 +38,28 @@
 
     </FrameLayout>
 
-    <FrameLayout
+    <FrameLayout style="@style/item_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:background="@drawable/row_bottom"
         android:id="@+id/dateRow">
 
-        <TextView
+        <TextView style="@style/item_info"
             android:layout_width="245dp"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Due:"
             android:id="@+id/tvDueDateLabel"
-            android:layout_gravity="center" />
+            android:layout_marginLeft="35dp" />
 
-        <TextView
+        <TextView style="@style/item_info"
             android:layout_width="230dp"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Due Date"
             android:id="@+id/tvDueDate"
-            android:layout_gravity="right" />
+            android:layout_marginLeft="80dp" />
 
     </FrameLayout>
 
