--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/check"
+        android:icon="@drawable/check_all"
+        android:title="@string/check_all" app:showAsAction="ifRoom" />
+    <item android:id="@+id/trash"
+        android:icon="@drawable/trash_icon"
+        android:title="@string/action_trash" app:showAsAction="ifRoom" />
+    <item android:id="@+id/add"
+        android:icon="@drawable/add_icon"
+        android:title="@string/add_item" app:showAsAction="ifRoom" />
 </menu>
